// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Badge /> Colors properly renders a blue badge 1`] = `
.emotion-2 {
  font-family: Motiva Sans;
  color: #FFFFFF;
  box-sizing: border-box;
  display: grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  grid-gap: 0.25rem;
  grid-template-columns: 1fr;
}

.emotion-0 {
  font-family: Motiva Sans;
  color: #FFFFFF;
  font-size: 0.8125rem;
  font-weight: 500;
  line-height: 1.5;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.emotion-4 {
  font-family: Motiva Sans;
  max-width: 100%;
  padding-left: 0.5rem;
  padding-right: 0.5rem;
  box-sizing: border-box;
  border: 1px solid;
  height: 24px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: #4263EB;
  border-color: #4263EB;
  border-radius: 2px;
}

<div
  className="emotion-4 emotion-5"
  height="24px"
>
  <div
    className="emotion-2 emotion-3"
    color="monochrome.white"
    display="grid"
  >
    <span
      className="emotion-0 emotion-1"
      color="monochrome.white"
      fontSize="size3"
      fontWeight="medium"
      overflow="hidden"
    >
      Badge Text
    </span>
  </div>
</div>
`;

exports[`<Badge /> Colors properly renders a brand badge 1`] = `
.emotion-2 {
  font-family: Motiva Sans;
  color: #FFFFFF;
  box-sizing: border-box;
  display: grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  grid-gap: 0.25rem;
  grid-template-columns: 1fr;
}

.emotion-0 {
  font-family: Motiva Sans;
  color: #FFFFFF;
  font-size: 0.8125rem;
  font-weight: 500;
  line-height: 1.5;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.emotion-4 {
  font-family: Motiva Sans;
  max-width: 100%;
  padding-left: 0.5rem;
  padding-right: 0.5rem;
  box-sizing: border-box;
  border: 1px solid;
  height: 24px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: #081D17;
  border-color: #081D17;
  border-radius: 2px;
}

<div
  className="emotion-4 emotion-5"
  height="24px"
>
  <div
    className="emotion-2 emotion-3"
    color="monochrome.white"
    display="grid"
  >
    <span
      className="emotion-0 emotion-1"
      color="monochrome.white"
      fontSize="size3"
      fontWeight="medium"
      overflow="hidden"
    >
      Badge Text
    </span>
  </div>
</div>
`;

exports[`<Badge /> Colors properly renders a cyan badge 1`] = `
.emotion-2 {
  font-family: Motiva Sans;
  color: #FFFFFF;
  box-sizing: border-box;
  display: grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  grid-gap: 0.25rem;
  grid-template-columns: 1fr;
}

.emotion-0 {
  font-family: Motiva Sans;
  color: #FFFFFF;
  font-size: 0.8125rem;
  font-weight: 500;
  line-height: 1.5;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.emotion-4 {
  font-family: Motiva Sans;
  max-width: 100%;
  padding-left: 0.5rem;
  padding-right: 0.5rem;
  box-sizing: border-box;
  border: 1px solid;
  height: 24px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: #0D7F91;
  border-color: #0D7F91;
  border-radius: 2px;
}

<div
  className="emotion-4 emotion-5"
  height="24px"
>
  <div
    className="emotion-2 emotion-3"
    color="monochrome.white"
    display="grid"
  >
    <span
      className="emotion-0 emotion-1"
      color="monochrome.white"
      fontSize="size3"
      fontWeight="medium"
      overflow="hidden"
    >
      Badge Text
    </span>
  </div>
</div>
`;

exports[`<Badge /> Colors properly renders a green badge 1`] = `
.emotion-2 {
  font-family: Motiva Sans;
  color: #FFFFFF;
  box-sizing: border-box;
  display: grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  grid-gap: 0.25rem;
  grid-template-columns: 1fr;
}

.emotion-0 {
  font-family: Motiva Sans;
  color: #FFFFFF;
  font-size: 0.8125rem;
  font-weight: 500;
  line-height: 1.5;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.emotion-4 {
  font-family: Motiva Sans;
  max-width: 100%;
  padding-left: 0.5rem;
  padding-right: 0.5rem;
  box-sizing: border-box;
  border: 1px solid;
  height: 24px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: #29863A;
  border-color: #29863A;
  border-radius: 2px;
}

<div
  className="emotion-4 emotion-5"
  height="24px"
>
  <div
    className="emotion-2 emotion-3"
    color="monochrome.white"
    display="grid"
  >
    <span
      className="emotion-0 emotion-1"
      color="monochrome.white"
      fontSize="size3"
      fontWeight="medium"
      overflow="hidden"
    >
      Badge Text
    </span>
  </div>
</div>
`;

exports[`<Badge /> Colors properly renders a neutral badge 1`] = `
.emotion-4 {
  font-family: Motiva Sans;
  max-width: 100%;
  padding-left: 0.5rem;
  padding-right: 0.5rem;
  box-sizing: border-box;
  border: 1px solid;
  height: 24px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: #0F0F10;
  border-color: #0F0F10;
  border-radius: 2px;
}

.emotion-2 {
  font-family: Motiva Sans;
  color: #FFFFFF;
  box-sizing: border-box;
  display: grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  grid-gap: 0.25rem;
  grid-template-columns: 1fr;
}

.emotion-0 {
  font-family: Motiva Sans;
  color: #FFFFFF;
  font-size: 0.8125rem;
  font-weight: 500;
  line-height: 1.5;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

<div
  className="emotion-4 emotion-5"
  height="24px"
>
  <div
    className="emotion-2 emotion-3"
    color="monochrome.white"
    display="grid"
  >
    <span
      className="emotion-0 emotion-1"
      color="monochrome.white"
      fontSize="size3"
      fontWeight="medium"
      overflow="hidden"
    >
      Badge Text
    </span>
  </div>
</div>
`;

exports[`<Badge /> Colors properly renders a neutral badge 2`] = `
.emotion-4 {
  font-family: Motiva Sans;
  max-width: 100%;
  padding-left: 0.5rem;
  padding-right: 0.5rem;
  box-sizing: border-box;
  border: 1px solid;
  height: 24px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: #0F0F10;
  border-color: #0F0F10;
  border-radius: 2px;
}

.emotion-2 {
  font-family: Motiva Sans;
  color: #FFFFFF;
  box-sizing: border-box;
  display: grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  grid-gap: 0.25rem;
  grid-template-columns: 1fr;
}

.emotion-0 {
  font-family: Motiva Sans;
  color: #FFFFFF;
  font-size: 0.8125rem;
  font-weight: 500;
  line-height: 1.5;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

<div
  className="emotion-4 emotion-5"
  height="24px"
>
  <div
    className="emotion-2 emotion-3"
    color="monochrome.white"
    display="grid"
  >
    <span
      className="emotion-0 emotion-1"
      color="monochrome.white"
      fontSize="size3"
      fontWeight="medium"
      overflow="hidden"
    >
      Badge Text
    </span>
  </div>
</div>
`;

exports[`<Badge /> Colors properly renders a orange badge 1`] = `
.emotion-2 {
  font-family: Motiva Sans;
  color: #FFFFFF;
  box-sizing: border-box;
  display: grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  grid-gap: 0.25rem;
  grid-template-columns: 1fr;
}

.emotion-0 {
  font-family: Motiva Sans;
  color: #FFFFFF;
  font-size: 0.8125rem;
  font-weight: 500;
  line-height: 1.5;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.emotion-4 {
  font-family: Motiva Sans;
  max-width: 100%;
  padding-left: 0.5rem;
  padding-right: 0.5rem;
  box-sizing: border-box;
  border: 1px solid;
  height: 24px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: #C55205;
  border-color: #C55205;
  border-radius: 2px;
}

<div
  className="emotion-4 emotion-5"
  height="24px"
>
  <div
    className="emotion-2 emotion-3"
    color="monochrome.white"
    display="grid"
  >
    <span
      className="emotion-0 emotion-1"
      color="monochrome.white"
      fontSize="size3"
      fontWeight="medium"
      overflow="hidden"
    >
      Badge Text
    </span>
  </div>
</div>
`;

exports[`<Badge /> Colors properly renders a pink badge 1`] = `
.emotion-2 {
  font-family: Motiva Sans;
  color: #FFFFFF;
  box-sizing: border-box;
  display: grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  grid-gap: 0.25rem;
  grid-template-columns: 1fr;
}

.emotion-0 {
  font-family: Motiva Sans;
  color: #FFFFFF;
  font-size: 0.8125rem;
  font-weight: 500;
  line-height: 1.5;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.emotion-4 {
  font-family: Motiva Sans;
  max-width: 100%;
  padding-left: 0.5rem;
  padding-right: 0.5rem;
  box-sizing: border-box;
  border: 1px solid;
  height: 24px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: #D6336C;
  border-color: #D6336C;
  border-radius: 2px;
}

<div
  className="emotion-4 emotion-5"
  height="24px"
>
  <div
    className="emotion-2 emotion-3"
    color="monochrome.white"
    display="grid"
  >
    <span
      className="emotion-0 emotion-1"
      color="monochrome.white"
      fontSize="size3"
      fontWeight="medium"
      overflow="hidden"
    >
      Badge Text
    </span>
  </div>
</div>
`;

exports[`<Badge /> Colors properly renders a purple badge 1`] = `
.emotion-2 {
  font-family: Motiva Sans;
  color: #FFFFFF;
  box-sizing: border-box;
  display: grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  grid-gap: 0.25rem;
  grid-template-columns: 1fr;
}

.emotion-0 {
  font-family: Motiva Sans;
  color: #FFFFFF;
  font-size: 0.8125rem;
  font-weight: 500;
  line-height: 1.5;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.emotion-4 {
  font-family: Motiva Sans;
  max-width: 100%;
  padding-left: 0.5rem;
  padding-right: 0.5rem;
  box-sizing: border-box;
  border: 1px solid;
  height: 24px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: #7048E8;
  border-color: #7048E8;
  border-radius: 2px;
}

<div
  className="emotion-4 emotion-5"
  height="24px"
>
  <div
    className="emotion-2 emotion-3"
    color="monochrome.white"
    display="grid"
  >
    <span
      className="emotion-0 emotion-1"
      color="monochrome.white"
      fontSize="size3"
      fontWeight="medium"
      overflow="hidden"
    >
      Badge Text
    </span>
  </div>
</div>
`;

exports[`<Badge /> Colors properly renders a red badge 1`] = `
.emotion-2 {
  font-family: Motiva Sans;
  color: #FFFFFF;
  box-sizing: border-box;
  display: grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  grid-gap: 0.25rem;
  grid-template-columns: 1fr;
}

.emotion-0 {
  font-family: Motiva Sans;
  color: #FFFFFF;
  font-size: 0.8125rem;
  font-weight: 500;
  line-height: 1.5;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.emotion-4 {
  font-family: Motiva Sans;
  max-width: 100%;
  padding-left: 0.5rem;
  padding-right: 0.5rem;
  box-sizing: border-box;
  border: 1px solid;
  height: 24px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: #D93838;
  border-color: #D93838;
  border-radius: 2px;
}

<div
  className="emotion-4 emotion-5"
  height="24px"
>
  <div
    className="emotion-2 emotion-3"
    color="monochrome.white"
    display="grid"
  >
    <span
      className="emotion-0 emotion-1"
      color="monochrome.white"
      fontSize="size3"
      fontWeight="medium"
      overflow="hidden"
    >
      Badge Text
    </span>
  </div>
</div>
`;

exports[`<Badge /> Colors properly renders a teal badge 1`] = `
.emotion-2 {
  font-family: Motiva Sans;
  color: #FFFFFF;
  box-sizing: border-box;
  display: grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  grid-gap: 0.25rem;
  grid-template-columns: 1fr;
}

.emotion-0 {
  font-family: Motiva Sans;
  color: #FFFFFF;
  font-size: 0.8125rem;
  font-weight: 500;
  line-height: 1.5;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.emotion-4 {
  font-family: Motiva Sans;
  max-width: 100%;
  padding-left: 0.5rem;
  padding-right: 0.5rem;
  box-sizing: border-box;
  border: 1px solid;
  height: 24px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: #098562;
  border-color: #098562;
  border-radius: 2px;
}

<div
  className="emotion-4 emotion-5"
  height="24px"
>
  <div
    className="emotion-2 emotion-3"
    color="monochrome.white"
    display="grid"
  >
    <span
      className="emotion-0 emotion-1"
      color="monochrome.white"
      fontSize="size3"
      fontWeight="medium"
      overflow="hidden"
    >
      Badge Text
    </span>
  </div>
</div>
`;

exports[`<Badge /> Colors properly renders a yellow badge 1`] = `
.emotion-2 {
  font-family: Motiva Sans;
  color: #FFFFFF;
  box-sizing: border-box;
  display: grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  grid-gap: 0.25rem;
  grid-template-columns: 1fr;
}

.emotion-0 {
  font-family: Motiva Sans;
  color: #FFFFFF;
  font-size: 0.8125rem;
  font-weight: 500;
  line-height: 1.5;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.emotion-4 {
  font-family: Motiva Sans;
  max-width: 100%;
  padding-left: 0.5rem;
  padding-right: 0.5rem;
  box-sizing: border-box;
  border: 1px solid;
  height: 24px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: #A36900;
  border-color: #A36900;
  border-radius: 2px;
}

<div
  className="emotion-4 emotion-5"
  height="24px"
>
  <div
    className="emotion-2 emotion-3"
    color="monochrome.white"
    display="grid"
  >
    <span
      className="emotion-0 emotion-1"
      color="monochrome.white"
      fontSize="size3"
      fontWeight="medium"
      overflow="hidden"
    >
      Badge Text
    </span>
  </div>
</div>
`;

exports[`<Badge /> Subtle properly renders a subtle blue badge 1`] = `
.emotion-4 {
  font-family: Motiva Sans;
  max-width: 100%;
  padding-left: 0.5rem;
  padding-right: 0.5rem;
  box-sizing: border-box;
  border: 1px solid;
  height: 24px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: #eceffd;
  border-color: #4263EB;
  border-radius: 2px;
}

.emotion-2 {
  font-family: Motiva Sans;
  color: #213175;
  box-sizing: border-box;
  display: grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  grid-gap: 0.25rem;
  grid-template-columns: 1fr;
}

.emotion-0 {
  font-family: Motiva Sans;
  color: #213175;
  font-size: 0.8125rem;
  font-weight: 500;
  line-height: 1.5;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

<div
  className="emotion-4 emotion-5"
  height="24px"
>
  <div
    className="emotion-2 emotion-3"
    color="palette.blue.dark"
    display="grid"
  >
    <span
      className="emotion-0 emotion-1"
      color="palette.blue.dark"
      fontSize="size3"
      fontWeight="medium"
      overflow="hidden"
    >
      Badge Text
    </span>
  </div>
</div>
`;

exports[`<Badge /> Subtle properly renders a subtle brand badge 1`] = `
.emotion-4 {
  font-family: Motiva Sans;
  max-width: 100%;
  padding-left: 0.5rem;
  padding-right: 0.5rem;
  box-sizing: border-box;
  border: 1px solid;
  height: 24px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: #e6e8e7;
  border-color: #081D17;
  border-radius: 2px;
}

.emotion-2 {
  font-family: Motiva Sans;
  color: #040e0b;
  box-sizing: border-box;
  display: grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  grid-gap: 0.25rem;
  grid-template-columns: 1fr;
}

.emotion-0 {
  font-family: Motiva Sans;
  color: #040e0b;
  font-size: 0.8125rem;
  font-weight: 500;
  line-height: 1.5;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

<div
  className="emotion-4 emotion-5"
  height="24px"
>
  <div
    className="emotion-2 emotion-3"
    color="palette.brand.dark"
    display="grid"
  >
    <span
      className="emotion-0 emotion-1"
      color="palette.brand.dark"
      fontSize="size3"
      fontWeight="medium"
      overflow="hidden"
    >
      Badge Text
    </span>
  </div>
</div>
`;

exports[`<Badge /> Subtle properly renders a subtle cyan badge 1`] = `
.emotion-4 {
  font-family: Motiva Sans;
  max-width: 100%;
  padding-left: 0.5rem;
  padding-right: 0.5rem;
  box-sizing: border-box;
  border: 1px solid;
  height: 24px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: #e6f2f4;
  border-color: #0D7F91;
  border-radius: 2px;
}

.emotion-2 {
  font-family: Motiva Sans;
  color: #063f48;
  box-sizing: border-box;
  display: grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  grid-gap: 0.25rem;
  grid-template-columns: 1fr;
}

.emotion-0 {
  font-family: Motiva Sans;
  color: #063f48;
  font-size: 0.8125rem;
  font-weight: 500;
  line-height: 1.5;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

<div
  className="emotion-4 emotion-5"
  height="24px"
>
  <div
    className="emotion-2 emotion-3"
    color="palette.cyan.dark"
    display="grid"
  >
    <span
      className="emotion-0 emotion-1"
      color="palette.cyan.dark"
      fontSize="size3"
      fontWeight="medium"
      overflow="hidden"
    >
      Badge Text
    </span>
  </div>
</div>
`;

exports[`<Badge /> Subtle properly renders a subtle green badge 1`] = `
.emotion-4 {
  font-family: Motiva Sans;
  max-width: 100%;
  padding-left: 0.5rem;
  padding-right: 0.5rem;
  box-sizing: border-box;
  border: 1px solid;
  height: 24px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: #e9f2eb;
  border-color: #29863A;
  border-radius: 2px;
}

.emotion-2 {
  font-family: Motiva Sans;
  color: #14431d;
  box-sizing: border-box;
  display: grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  grid-gap: 0.25rem;
  grid-template-columns: 1fr;
}

.emotion-0 {
  font-family: Motiva Sans;
  color: #14431d;
  font-size: 0.8125rem;
  font-weight: 500;
  line-height: 1.5;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

<div
  className="emotion-4 emotion-5"
  height="24px"
>
  <div
    className="emotion-2 emotion-3"
    color="palette.green.dark"
    display="grid"
  >
    <span
      className="emotion-0 emotion-1"
      color="palette.green.dark"
      fontSize="size3"
      fontWeight="medium"
      overflow="hidden"
    >
      Badge Text
    </span>
  </div>
</div>
`;

exports[`<Badge /> Subtle properly renders a subtle neutral badge 1`] = `
.emotion-4 {
  font-family: Motiva Sans;
  max-width: 100%;
  padding-left: 0.5rem;
  padding-right: 0.5rem;
  box-sizing: border-box;
  border: 1px solid;
  height: 24px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: #e7e7e7;
  border-color: #0F0F10;
  border-radius: 2px;
}

.emotion-2 {
  font-family: Motiva Sans;
  color: #070708;
  box-sizing: border-box;
  display: grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  grid-gap: 0.25rem;
  grid-template-columns: 1fr;
}

.emotion-0 {
  font-family: Motiva Sans;
  color: #070708;
  font-size: 0.8125rem;
  font-weight: 500;
  line-height: 1.5;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

<div
  className="emotion-4 emotion-5"
  height="24px"
>
  <div
    className="emotion-2 emotion-3"
    color="palette.neutral.dark"
    display="grid"
  >
    <span
      className="emotion-0 emotion-1"
      color="palette.neutral.dark"
      fontSize="size3"
      fontWeight="medium"
      overflow="hidden"
    >
      Badge Text
    </span>
  </div>
</div>
`;

exports[`<Badge /> Subtle properly renders a subtle neutral badge 2`] = `
.emotion-4 {
  font-family: Motiva Sans;
  max-width: 100%;
  padding-left: 0.5rem;
  padding-right: 0.5rem;
  box-sizing: border-box;
  border: 1px solid;
  height: 24px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: #e7e7e7;
  border-color: #0F0F10;
  border-radius: 2px;
}

.emotion-2 {
  font-family: Motiva Sans;
  color: #070708;
  box-sizing: border-box;
  display: grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  grid-gap: 0.25rem;
  grid-template-columns: 1fr;
}

.emotion-0 {
  font-family: Motiva Sans;
  color: #070708;
  font-size: 0.8125rem;
  font-weight: 500;
  line-height: 1.5;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

<div
  className="emotion-4 emotion-5"
  height="24px"
>
  <div
    className="emotion-2 emotion-3"
    color="palette.neutral.dark"
    display="grid"
  >
    <span
      className="emotion-0 emotion-1"
      color="palette.neutral.dark"
      fontSize="size3"
      fontWeight="medium"
      overflow="hidden"
    >
      Badge Text
    </span>
  </div>
</div>
`;

exports[`<Badge /> Subtle properly renders a subtle orange badge 1`] = `
.emotion-4 {
  font-family: Motiva Sans;
  max-width: 100%;
  padding-left: 0.5rem;
  padding-right: 0.5rem;
  box-sizing: border-box;
  border: 1px solid;
  height: 24px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: #f9ede6;
  border-color: #C55205;
  border-radius: 2px;
}

.emotion-2 {
  font-family: Motiva Sans;
  color: #622902;
  box-sizing: border-box;
  display: grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  grid-gap: 0.25rem;
  grid-template-columns: 1fr;
}

.emotion-0 {
  font-family: Motiva Sans;
  color: #622902;
  font-size: 0.8125rem;
  font-weight: 500;
  line-height: 1.5;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

<div
  className="emotion-4 emotion-5"
  height="24px"
>
  <div
    className="emotion-2 emotion-3"
    color="palette.orange.dark"
    display="grid"
  >
    <span
      className="emotion-0 emotion-1"
      color="palette.orange.dark"
      fontSize="size3"
      fontWeight="medium"
      overflow="hidden"
    >
      Badge Text
    </span>
  </div>
</div>
`;

exports[`<Badge /> Subtle properly renders a subtle pink badge 1`] = `
.emotion-4 {
  font-family: Motiva Sans;
  max-width: 100%;
  padding-left: 0.5rem;
  padding-right: 0.5rem;
  box-sizing: border-box;
  border: 1px solid;
  height: 24px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: #faeaf0;
  border-color: #D6336C;
  border-radius: 2px;
}

.emotion-2 {
  font-family: Motiva Sans;
  color: #6b1936;
  box-sizing: border-box;
  display: grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  grid-gap: 0.25rem;
  grid-template-columns: 1fr;
}

.emotion-0 {
  font-family: Motiva Sans;
  color: #6b1936;
  font-size: 0.8125rem;
  font-weight: 500;
  line-height: 1.5;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

<div
  className="emotion-4 emotion-5"
  height="24px"
>
  <div
    className="emotion-2 emotion-3"
    color="palette.pink.dark"
    display="grid"
  >
    <span
      className="emotion-0 emotion-1"
      color="palette.pink.dark"
      fontSize="size3"
      fontWeight="medium"
      overflow="hidden"
    >
      Badge Text
    </span>
  </div>
</div>
`;

exports[`<Badge /> Subtle properly renders a subtle purple badge 1`] = `
.emotion-4 {
  font-family: Motiva Sans;
  max-width: 100%;
  padding-left: 0.5rem;
  padding-right: 0.5rem;
  box-sizing: border-box;
  border: 1px solid;
  height: 24px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: #f0ecfc;
  border-color: #7048E8;
  border-radius: 2px;
}

.emotion-2 {
  font-family: Motiva Sans;
  color: #382474;
  box-sizing: border-box;
  display: grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  grid-gap: 0.25rem;
  grid-template-columns: 1fr;
}

.emotion-0 {
  font-family: Motiva Sans;
  color: #382474;
  font-size: 0.8125rem;
  font-weight: 500;
  line-height: 1.5;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

<div
  className="emotion-4 emotion-5"
  height="24px"
>
  <div
    className="emotion-2 emotion-3"
    color="palette.purple.dark"
    display="grid"
  >
    <span
      className="emotion-0 emotion-1"
      color="palette.purple.dark"
      fontSize="size3"
      fontWeight="medium"
      overflow="hidden"
    >
      Badge Text
    </span>
  </div>
</div>
`;

exports[`<Badge /> Subtle properly renders a subtle red badge 1`] = `
.emotion-4 {
  font-family: Motiva Sans;
  max-width: 100%;
  padding-left: 0.5rem;
  padding-right: 0.5rem;
  box-sizing: border-box;
  border: 1px solid;
  height: 24px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: #fbebeb;
  border-color: #D93838;
  border-radius: 2px;
}

.emotion-2 {
  font-family: Motiva Sans;
  color: #6c1c1c;
  box-sizing: border-box;
  display: grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  grid-gap: 0.25rem;
  grid-template-columns: 1fr;
}

.emotion-0 {
  font-family: Motiva Sans;
  color: #6c1c1c;
  font-size: 0.8125rem;
  font-weight: 500;
  line-height: 1.5;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

<div
  className="emotion-4 emotion-5"
  height="24px"
>
  <div
    className="emotion-2 emotion-3"
    color="palette.red.dark"
    display="grid"
  >
    <span
      className="emotion-0 emotion-1"
      color="palette.red.dark"
      fontSize="size3"
      fontWeight="medium"
      overflow="hidden"
    >
      Badge Text
    </span>
  </div>
</div>
`;

exports[`<Badge /> Subtle properly renders a subtle teal badge 1`] = `
.emotion-4 {
  font-family: Motiva Sans;
  max-width: 100%;
  padding-left: 0.5rem;
  padding-right: 0.5rem;
  box-sizing: border-box;
  border: 1px solid;
  height: 24px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: #e6f2ef;
  border-color: #098562;
  border-radius: 2px;
}

.emotion-2 {
  font-family: Motiva Sans;
  color: #044231;
  box-sizing: border-box;
  display: grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  grid-gap: 0.25rem;
  grid-template-columns: 1fr;
}

.emotion-0 {
  font-family: Motiva Sans;
  color: #044231;
  font-size: 0.8125rem;
  font-weight: 500;
  line-height: 1.5;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

<div
  className="emotion-4 emotion-5"
  height="24px"
>
  <div
    className="emotion-2 emotion-3"
    color="palette.teal.dark"
    display="grid"
  >
    <span
      className="emotion-0 emotion-1"
      color="palette.teal.dark"
      fontSize="size3"
      fontWeight="medium"
      overflow="hidden"
    >
      Badge Text
    </span>
  </div>
</div>
`;

exports[`<Badge /> Subtle properly renders a subtle yellow badge 1`] = `
.emotion-4 {
  font-family: Motiva Sans;
  max-width: 100%;
  padding-left: 0.5rem;
  padding-right: 0.5rem;
  box-sizing: border-box;
  border: 1px solid;
  height: 24px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: #f5f0e5;
  border-color: #A36900;
  border-radius: 2px;
}

.emotion-2 {
  font-family: Motiva Sans;
  color: #513400;
  box-sizing: border-box;
  display: grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  grid-gap: 0.25rem;
  grid-template-columns: 1fr;
}

.emotion-0 {
  font-family: Motiva Sans;
  color: #513400;
  font-size: 0.8125rem;
  font-weight: 500;
  line-height: 1.5;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

<div
  className="emotion-4 emotion-5"
  height="24px"
>
  <div
    className="emotion-2 emotion-3"
    color="palette.yellow.dark"
    display="grid"
  >
    <span
      className="emotion-0 emotion-1"
      color="palette.yellow.dark"
      fontSize="size3"
      fontWeight="medium"
      overflow="hidden"
    >
      Badge Text
    </span>
  </div>
</div>
`;

exports[`<Badge /> Variants properly renders a default badge 1`] = `
.emotion-4 {
  font-family: Motiva Sans;
  max-width: 100%;
  padding-left: 0.5rem;
  padding-right: 0.5rem;
  box-sizing: border-box;
  border: 1px solid;
  height: 24px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: #0F0F10;
  border-color: #0F0F10;
  border-radius: 2px;
}

.emotion-2 {
  font-family: Motiva Sans;
  color: #FFFFFF;
  box-sizing: border-box;
  display: grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  grid-gap: 0.25rem;
  grid-template-columns: 1fr;
}

.emotion-0 {
  font-family: Motiva Sans;
  color: #FFFFFF;
  font-size: 0.8125rem;
  font-weight: 500;
  line-height: 1.5;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

<div
  className="emotion-4 emotion-5"
  height="24px"
>
  <div
    className="emotion-2 emotion-3"
    color="monochrome.white"
    display="grid"
  >
    <span
      className="emotion-0 emotion-1"
      color="monochrome.white"
      fontSize="size3"
      fontWeight="medium"
      overflow="hidden"
    >
      Badge Text
    </span>
  </div>
</div>
`;

exports[`<Badge /> Variants properly renders a pill badge 1`] = `
.emotion-2 {
  font-family: Motiva Sans;
  color: #FFFFFF;
  box-sizing: border-box;
  display: grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  grid-gap: 0.25rem;
  grid-template-columns: 1fr;
}

.emotion-0 {
  font-family: Motiva Sans;
  color: #FFFFFF;
  font-size: 0.8125rem;
  font-weight: 500;
  line-height: 1.5;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.emotion-4 {
  font-family: Motiva Sans;
  max-width: 100%;
  padding-left: 0.5rem;
  padding-right: 0.5rem;
  box-sizing: border-box;
  border: 1px solid;
  height: 24px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: #0F0F10;
  border-color: #0F0F10;
  border-radius: 999px;
}

<div
  className="emotion-4 emotion-5"
  height="24px"
>
  <div
    className="emotion-2 emotion-3"
    color="monochrome.white"
    display="grid"
  >
    <span
      className="emotion-0 emotion-1"
      color="monochrome.white"
      fontSize="size3"
      fontWeight="medium"
      overflow="hidden"
    >
      Badge Text
    </span>
  </div>
</div>
`;

exports[`<Badge /> iconEnd properly renders a badge with an ending icon 1`] = `
.emotion-6 {
  font-family: Motiva Sans;
  max-width: 100%;
  padding-left: 0.5rem;
  padding-right: 0.5rem;
  box-sizing: border-box;
  border: 1px solid;
  height: 24px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: #0F0F10;
  border-color: #0F0F10;
  border-radius: 2px;
}

.emotion-0 {
  font-family: Motiva Sans;
  color: #FFFFFF;
  font-size: 0.8125rem;
  font-weight: 500;
  line-height: 1.5;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.emotion-4 {
  font-family: Motiva Sans;
  color: #FFFFFF;
  box-sizing: border-box;
  display: grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  grid-gap: 0.25rem;
  grid-template-columns: 1fr 0fr;
}

<div
  className="emotion-6 emotion-7"
  height="24px"
>
  <div
    className="emotion-4 emotion-5"
    color="monochrome.white"
    display="grid"
  >
    <span
      className="emotion-0 emotion-1"
      color="monochrome.white"
      fontSize="size3"
      fontWeight="medium"
      overflow="hidden"
    >
      Badge Text
    </span>
    <i
      className="ar ar-cr-logo emotion-2 emotion-3"
    />
  </div>
</div>
`;

exports[`<Badge /> iconStart and iconEnd properly renders a badge with both a starting and ending icon 1`] = `
.emotion-8 {
  font-family: Motiva Sans;
  max-width: 100%;
  padding-left: 0.5rem;
  padding-right: 0.5rem;
  box-sizing: border-box;
  border: 1px solid;
  height: 24px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: #0F0F10;
  border-color: #0F0F10;
  border-radius: 2px;
}

.emotion-2 {
  font-family: Motiva Sans;
  color: #FFFFFF;
  font-size: 0.8125rem;
  font-weight: 500;
  line-height: 1.5;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.emotion-6 {
  font-family: Motiva Sans;
  color: #FFFFFF;
  box-sizing: border-box;
  display: grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  grid-gap: 0.25rem;
  grid-template-columns: 0fr 1fr 0fr;
}

<div
  className="emotion-8 emotion-9"
  height="24px"
>
  <div
    className="emotion-6 emotion-7"
    color="monochrome.white"
    display="grid"
  >
    <i
      className="ar ar-cr-logo emotion-0 emotion-1"
    />
    <span
      className="emotion-2 emotion-3"
      color="monochrome.white"
      fontSize="size3"
      fontWeight="medium"
      overflow="hidden"
    >
      Badge Text
    </span>
    <i
      className="ar ar-cr-logo emotion-0 emotion-1"
    />
  </div>
</div>
`;

exports[`<Badge /> iconStart properly renders a badge with a starting icon 1`] = `
.emotion-6 {
  font-family: Motiva Sans;
  max-width: 100%;
  padding-left: 0.5rem;
  padding-right: 0.5rem;
  box-sizing: border-box;
  border: 1px solid;
  height: 24px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: #0F0F10;
  border-color: #0F0F10;
  border-radius: 2px;
}

.emotion-2 {
  font-family: Motiva Sans;
  color: #FFFFFF;
  font-size: 0.8125rem;
  font-weight: 500;
  line-height: 1.5;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.emotion-4 {
  font-family: Motiva Sans;
  color: #FFFFFF;
  box-sizing: border-box;
  display: grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  grid-gap: 0.25rem;
  grid-template-columns: 0fr 1fr;
}

<div
  className="emotion-6 emotion-7"
  height="24px"
>
  <div
    className="emotion-4 emotion-5"
    color="monochrome.white"
    display="grid"
  >
    <i
      className="ar ar-cr-logo emotion-0 emotion-1"
    />
    <span
      className="emotion-2 emotion-3"
      color="monochrome.white"
      fontSize="size3"
      fontWeight="medium"
      overflow="hidden"
    >
      Badge Text
    </span>
  </div>
</div>
`;
